ChangeLog

May 2020: Re-calculated mean annual surface temperatures on Mars over 21 Myr and added them to the archive under Mars/MilankOutput/

16 May 2020: flux -> flux_mars77 in jsubv. This was the last occurrence of the function flux, and the legendary function flux was removed from the collection. It is superseded by subroutine mars_flux2, which provides a consistent treatment of the sky irradiance for an obstructed sky. For flat ground flux_mars77 can be used.

In this process, it was realized that different parts of the program collection used different conventions for the slope orientation. In functions flux and flux_noatm, zero slope azimuth meant north-facing; in flux_mars2 and flux_wshad zero slope azimuth meant south-facing. With function flux gone, the convention in flux_noatm was changed. Now zero slope azimuth uniformly means south-facing (the azimuth of the direction of steepest decent).

May 2020: dusted off mars_mapiqh2v, renamed it to mars_mapi2p, and added example output in Test/

24/25 Apr 2020: revised the type of body parameters in fast_modules_asteroid, so asteroid_fast? can be more easily used with other bodies.

14 Apr 2020: dug up analytical solution to heat equation with Stefan-Boltzmann law as boundary condition; added to UserGuide section 1.1. 

28 Feb 2020: added tempr_driver.f90 (was used to make Fig. 3 in my 2008 Milankovitch paper)

16 Jan 2020: added makegaussian.c

31 Dec 2019: Topo3D/ changed grid downsampling from 4 neighbors to 8 neighbors

30 Nov 2019: added Armand distribution as option for initial velocities in Exosphere/montecarlo.f90

22 Oct 2019: flux -> flux_mars77  in jsub, mars_mapi, mars_mapt2, and fast_subs_mars
Functions flux and flux_mars77 do not return the exact same results, because in flux_mars77 the atmospheric short-wavelength scattered irradiance is multiplied with (1-albedo).

21 Oct 2019: Added Mars/Tests/

12 Oct 2019: Release v1.1.6  doi:10.5281/zenodo.3483924
