@@ -10,8 +10,8 @@
     1    0.00  35.000  .300   150.0    200.0  90.00     0.0  -9999.0000
     2    0.00  35.000  .300   150.0    200.0   0.00   180.0  -9999.0000
     2    0.00  35.000  .300   150.0    200.0  10.00   180.0  -9999.0000
-    2    0.00  35.000  .300   150.0    200.0  20.00   180.0      0.2310
-    2    0.00  35.000  .300   150.0    200.0  30.00   180.0      0.0663
+    2    0.00  35.000  .300   150.0    200.0  20.00   180.0      0.1952
+    2    0.00  35.000  .300   150.0    200.0  30.00   180.0      0.0603
     2    0.00  35.000  .300   150.0    200.0  40.00   180.0      0.0386
     2    0.00  35.000  .300   150.0    200.0  50.00   180.0      0.0287
     2    0.00  35.000  .300   150.0    200.0  60.00   180.0      0.0200
